5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1593_2425.log
== TEST (2019-03-28 11:11:46) 
-- CODE:
d= float(input("distancia: "))
c= float(input("combustivel: "))
total= (d/c)
print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:11:58) 
-- CODE:
d= float(input("distancia: "))
c= float(input("combustivel: "))
total= (d/c)
print(round(total, 3))
-- EXECUTION TIME:
0.192254
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:12:21) 
-- CODE:
d= float(input("distancia: "))
c= float(input("combustivel: "))
total= (d/c) km/l
print(round(total, 3))
-- EXECUTION TIME:
0.186174
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 3
    total= (d/c) km/l
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:13:06) 
-- CODE:
d= float(input("distancia: "))
c= float(input("combustivel: "))
total= (d/c) 
print(round(total, 3)"km/l")
-- EXECUTION TIME:
0.129122
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 4
    print(round(total, 3)"km/l")
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:13:19) 
-- CODE:
d= float(input("distancia: "))
c= float(input("combustivel: "))
total= (d/c) 
print(round(total, 3),"km/l")
-- EXECUTION TIME:
0.130277
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
